# ft_ls

./: CMakeLists.txt  Makefile  README.md  file.txt  ft_ls  ft_ls.h  link  main.c
ft_printf/: Makefile
include/: ft_ls.h
libft/: Makefile
libft/src/: ft_putstr_fd.c  ft_strsplit.c
src/: display.c  errors.c  flag_help.c  flag_l.c  help.c  init_info.c  list_job.c  main.c  parse_flags.c  path_manage.c  recusive.c  sort_list.c
